@@ -14,10 +14,11 @@ use Template ();
 sub register {
     my ( $self, $app, $settings ) = @_;
 
-    my $template = Template->new( $settings->{'config'} || {
-        'RELATIVE'  => 1,
-        'EVAL_PERL' => 0,
-    } );
+    $settings->{'config'}{'RELATIVE'}     //= 1;
+    $settings->{'config'}{'EVAL_PERL'}    //= 0;
+    $settings->{'config'}{'INCLUDE_PATH'} //= $app->renderer->paths;
+
+    my $template = Template->new( $settings->{'config'} );
 
     $settings->{'context'}->( $template->context ) if ( $settings->{'context'} );
 
@@ -34,8 +35,6 @@ sub register {
             },
             $output,
         ) || do {
-            $app->log->error( $template->error );
-
             if (
                 $app->mode ne 'development' and
                 ref( $settings->{'settings'}{'error_handler'} ) eq 'CODE'
@@ -43,18 +42,25 @@ sub register {
                 $settings->{'settings'}{'error_handler'}->( $controller, $renderer, $app );
             }
             else {
-                my $default_handler = $renderer->default_handler;
-                $renderer->default_handler('ep');
+                unless (
+                    $template->error and (
+                        $template->error eq 'file error - exception.html.tt: not found' or
+                        $template->error eq 'file error - exception.' . $app->mode . '.html.tt: not found'
+                    )
+                ) {
+                    my $default_handler = $renderer->default_handler;
+                    $renderer->default_handler('ep');
 
-                $controller->reply->exception(
-                    Mojo::Exception->new( __PACKAGE__ . ' - ' . $template->error || '' )
-                );
+                    $controller->reply->exception(
+                        Mojo::Exception->new( __PACKAGE__ . ' - ' . $template->error )
+                    );
 
-                $renderer->default_handler($default_handler);
+                    $controller->rendered(
+                        ( $template->error and $template->error =~ /not found/ ) ? 404 : 500
+                    );
 
-                $controller->rendered(
-                    ( $template->error and $template->error =~ /not found/ ) ? 404 : 500
-                );
+                    $renderer->default_handler($default_handler);
+                }
             }
         };
 
@@ -92,7 +98,11 @@ my($self);
 
 =head1 SYNOPSIS
 
-    # Mojolicious
+    # Simple Mojolicious
+    $self->plugin('ToolkitRenderer');
+    $self->renderer->default_handler('tt');
+
+    # Customized Mojolicious
     $self->plugin(
         'ToolkitRenderer',
         {
@@ -101,10 +111,11 @@ my($self);
                 controller      => 'c',
             },
             config => {
-                RELATIVE  => 1,
-                EVAL_PERL => 0,
-                FILTERS   => { ucfirst => sub { return ucfirst shift } },
-                ENCODING  => 'utf8',
+                RELATIVE     => 1,
+                EVAL_PERL    => 0,
+                FILTERS      => { ucfirst => sub { return ucfirst shift } },
+                ENCODING     => 'utf8',
+                INCLUDE_PATH => $self->renderer->paths,
             },
             context => sub {
                 shift->define_vmethod( 'scalar', 'upper', sub { return uc shift } );
@@ -181,12 +192,25 @@ page and logs). But you can override this.
     error_handler => sub {
         my ( $controller, $renderer, $app ) = @_;
 
-        my $default_handler = $renderer->default_handler;
-        $renderer->default_handler('ep');
-        $controller->render_exception( Mojo::Exception->new( $template->error ) );
-        $renderer->default_handler($default_handler);
+        unless (
+            $template->error and (
+                $template->error eq 'file error - exception.html.tt: not found' or
+                $template->error eq 'file error - exception.' . $app->mode . '.html.tt: not found'
+            )
+        ) {
+            my $default_handler = $renderer->default_handler;
+            $renderer->default_handler('ep');
 
-        $controller->rendered(500);
+            $controller->reply->exception(
+                Mojo::Exception->new( __PACKAGE__ . ' - ' . $template->error )
+            );
+
+            $controller->rendered(
+                ( $template->error and $template->error =~ /not found/ ) ? 404 : 500
+            );
+
+            $renderer->default_handler($default_handler);
+        }
     }
 
 =head2 context
